# Morik

./: .gitignore  Dockerfile  README.md  apt_install_script.sh  code_coverage.sh  run_tests.sh
LaTeX/: Programmentwurf.tex
LaTeX/Inhalt/00_Latex/: kopfundFusszeile.tex  praeambel.tex
LaTeX/Inhalt/01_Standard/: titelseite.tex
LaTeX/Inhalt/03_Verzeichnisse/: abkuerzungen.tex
LaTeX/Inhalt/04_Inhalt/: clean_architecture.tex  domain_driven_design.tex  einleitung.tex  entwurfsmuster.tex  programming_principles.tex  refactoring.tex  unit_tests.tex
src/: CMakeLists.txt  main.cpp  passwords.db
src/adapters/database/: AbstractSqlDatabase.h  DatabaseInterface.cpp  DatabaseInterface.h  DbInterface.cpp  DbInterface.h
src/adapters/ui/: UiDataHelper.cpp  UiDataHelper.h
src/application/: AbstractDatabase.h  AbstractDatabaseInterface.h  AbstractUserInterface.h  Cipher.h  Database.h  DatabaseColumn.h  DbInterface.cpp  DbInterface.h  EncryptedPassword.h  EncryptionInterface.h  Entry.h  EntryFactory.cpp  EntryFactory.h  EntryId.h  EntryName.h  EntryRepository.cpp  EntryRepository.h  Hash.h  InstanceManager.cpp  InstanceManager.h  MasterPasswordVerifier.h  PasswordEncryption.h  PasswordGenerator.cpp  PasswordGenerator.h  PasswordLength.h  PasswordVerifier.h  PseudoRandomNumberGenerator.h
src/application/DDD/: EncryptedPassword.h  Entry.h  EntryFactory.cpp  EntryId.h  EntryName.h  EntryRepository.cpp  EntryRepository.h  Login.h  PasswordEncryption.h  PlaintextPassword.h  Username.h
src/database/: DbInterface.cpp  DbInterface.h
src/encryption/: AES.h  AESCipher.h  AES_CBC.h  CBC_Cipher.h  Cipher.cpp  Cipher.h  CipherBase.h  Encryption.h  KeyDerivation.h
src/plugins/database/: SQLiteDatabase.cpp  SQLiteDatabase.h
src/plugins/encryption/: BLOCK.h  CBC_Cipher.cpp  CBC_Cipher.h  Cipher.h  DefaultHash.h  EncryptionInterface.h  KeyDerivation.h  PasswordEncryptionHandler.h
src/plugins/prng/: MersenneTwister.cpp  MersenneTwister.h
src/plugins/ui/: CommandLineInterface.cpp  CommandLineInterface.h
src/tests/: test_main.cpp
src/tests/adapters/database/: AbstractSqlDatabaseMock.h  databaseInterface_tests.cpp  test_databaseInterface.cpp
src/tests/application/: AbstractDatabaseInterfaceMock.h  encryptor_tests.cpp  factory_tests.cpp  password_generator_tests.cpp  repository_tests.cpp  verifier_tests.cpp
src/tests/application/DDD/: AbstractDatabaseInterfaceMock.h  encryptor_tests.cpp  factory_tests.cpp  repository_tests.cpp
src/tests/plugins/encryption/: crypto_tests.cpp
